--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,14 @@ edition = "2018"
 [dependencies]
 once_cell = "1.5"
 cpal = { version = "0.13.1" }
-sixtyfps = { version = "0.0.6" }
+
+[dependencies.sixtyfps]
+version = "0.1.0"
+# path = "../sixtyfps/api/sixtyfps-rs"
+
+[build-dependencies.sixtyfps-build]
+version = "0.1.0"
+# path = "../sixtyfps/api/sixtyfps-rs/sixtyfps-build"
 
 [dependencies.gameboy]
 path = "../gameboy"
@@ -15,6 +22,3 @@ path = "../gameboy"
 # rev = "ff9c35b3957b4c215bd817c4d2ca18de0fb7f25e"
 # Use as a lib, features are used by its bin's main.rs only.
 default-features = false
-
-[build-dependencies]
-sixtyfps-build = "0.0.6"
