--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ once_cell = "1.5"
 cpal = { version = "0.13.3", features = ["wasm-bindgen"] }
 tiny-skia = "0.5.1"
 rhai = { version = "1.1.1", features = ["only_i32"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dependencies.sixtyfps]
 version = "=0.1.4"
