--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ tiny-skia = "0.5.1"
 rhai = { version = "1.1.1", features = ["only_i32"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+notify = "4.0"
 
 [dependencies.sixtyfps]
 version = "=0.1.4"
