--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ rhai = { version = "1.1.1", features = ["only_i32"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 notify = "4.0"
+miniz_oxide = "0.5.1"
+base64-url = "1.4.10"
 
 [dependencies.sixtyfps]
 version = "=0.1.5"
