Rename the project to chiptrack

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cooperator"
+name = "chiptrack"
 version = "0.1.0"
 authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
 edition = "2018"
