--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ serde_json = "1.0"
 notify = "4.0"
 miniz_oxide = "0.5.1"
 base64-url = "1.4.10"
+midir = "0.7"
+midly = "0.5"
 
 [dependencies.sixtyfps]
 version = "0.1.5"
