--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 # path = "src/main.rs"
 # [target.'cfg(target_arch = "wasm32")'.dependencies]
 # wasm-bindgen = { version = "0.2" }
-# web-sys = { version = "0.3", features=["console"] }
+# web-sys = { version = "0.3", features=["console", "Location", "UrlSearchParams"] }
 # console_error_panic_hook = "0.1.5"
 # [patch.crates-io]
 # blip_buf = { path = "../blip_buf-rs"}
