--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ rhai = { version = "1", features = ["only_i32"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 notify = "4"
-miniz_oxide = "0.5"
-base64-url = "1"
 midir = "0.8"
 midly = "0.5"
+url = "2"
+ehttp = "0.2"
 
 [dependencies.slint]
 version = "0.2"
