--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,15 @@ once_cell = "1"
 cpal = { version = "0.13", features = ["wasm-bindgen"] }
 tiny-skia = "0.6"
 rhai = { version = "1", features = ["only_i32"] }
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 notify = "4"
 midir = "0.8"
 midly = "0.5"
 url = "2"
 ehttp = "0.2"
+bit-set = "0.5"
+pulldown-cmark = "0.9"
+regex = "1"
 
 [dependencies.slint]
 version = "0.2"
