Handle song as files instead of through project names
The project name way allowed to start a project without having to handle saving,
but at this point it's worth properly handle opening files since I also
want to be able to open gist URLs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ehttp = "0.2"
 bit-set = "0.5"
 pulldown-cmark = "0.9"
 regex = "1"
+native-dialog = "0.6"
 
 [dependencies.slint]
 version = "0.2"
