--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,13 @@ regex = "1"
 native-dialog = "0.6"
 
 [dependencies.slint]
-version = "0.2"
+version = "0.3"
 default-features = false
 # Re-enable everything except "backend-qt"
-features = ["std", "backend-gl-all", "compat-0-2-0"]
+features = ["std", "backend-winit", "renderer-winit-femtovg", "compat-0-3-0"]
 
 [build-dependencies.slint-build]
-version = "0.2"
+version = "0.3"
 
 [dependencies.rboy]
 git = "https://github.com/jturcotte/rboy.git"
