--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.2.0"
 authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
 edition = "2018"
 
+[features]
+std = ["slint/std", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex", "native-dialog"]
+
+default = ["std"]
+
 ## wasm build stuff
 ## Uncomment and build with: wasm-pack build --release --target web
 # resolver = "2"
@@ -19,18 +24,18 @@ edition = "2018"
 
 
 [dependencies]
-once_cell = "1"
-cpal = { version = "0.13", features = ["wasm-bindgen"] }
-tiny-skia = "0.6"
-serde_json = "1"
-notify = "4"
-midir = "0.8"
-midly = "0.5"
-url = "2"
-ehttp = "0.2"
-pulldown-cmark = "0.9"
-regex = "1"
-native-dialog = "0.6"
+cpal = { version = "0.13", features = ["wasm-bindgen"], optional = true }
+once_cell = { version = "1", optional = true }
+tiny-skia = { version = "0.6", optional = true }
+serde_json = { version = "1", optional = true }
+notify = { version = "4", optional = true }
+midir = { version = "0.8", optional = true }
+midly = { version = "0.5", optional = true }
+url = { version = "2", optional = true }
+ehttp = { version = "0.2", optional = true }
+pulldown-cmark = { version = "0.9", optional = true }
+regex = { version = "1", optional = true }
+native-dialog = { version = "0.6", optional = true }
 
 [dependencies.slint]
 version = "0.3"
@@ -46,6 +51,7 @@ git = "https://github.com/jturcotte/rboy.git"
 rev = "836b4e7a58288a29c13bf7f8b967358c7331ee41"
 # Use as a lib, features are used by its bin's main.rs only.
 default-features = false
+optional = true
 
 [dependencies.wamr-sys]
 git = "https://github.com/jturcotte/wamr-sys.git"
