--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,9 @@ default-features = false
 cpal = { version = "0.13", features = ["wasm-bindgen"], optional = true }
 once_cell = { version = "1", optional = true }
 tiny-skia = { version = "0.6", optional = true }
+serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", optional = true }
+postcard = { version = "1", default-features = false, features = ["alloc"] }
 notify = { version = "4", optional = true }
 midir = { version = "0.8", optional = true }
 midly = { version = "0.5", optional = true }
