--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ edition = "2021"
 [features]
 default = ["desktop_native"]
 std = ["slint/std"]
-desktop = ["std", "slint/backend-winit", "slint/renderer-winit-femtovg", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
+desktop = ["std", "slint/backend-winit", "slint/renderer-winit-femtovg", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
 desktop_native = ["desktop", "wamr-sys/std", "native-dialog"]
 desktop_web = ["desktop"]
 gba = ["dep:gba", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
@@ -59,6 +59,7 @@ tiny-skia = { version = "0.6", optional = true }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", optional = true }
 postcard = { version = "1", default-features = false, features = ["alloc"] }
+wat = { version = "1", optional = true }
 notify = { version = "4", optional = true }
 midir = { version = "0.8", optional = true }
 midly = { version = "0.5", optional = true }
