--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,9 @@ edition = "2021"
 [features]
 default = ["desktop_native"]
 std = ["slint/std"]
-desktop = ["std", "slint/backend-winit", "slint/renderer-winit-femtovg", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
-desktop_native = ["desktop", "wamr-sys/std", "native-dialog"]
-desktop_web = ["desktop"]
+desktop = ["std", "slint/backend-winit", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
+desktop_native = ["desktop", "slint/renderer-winit-skia", "wamr-sys/std", "native-dialog"]
+desktop_web = ["desktop", "slint/renderer-winit-femtovg"]
 gba = ["dep:gba", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
 
 [build-dependencies.slint-build]
