--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ std = ["slint/std"]
 desktop = ["std", "slint/backend-winit", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
 desktop_native = ["desktop", "slint/renderer-winit-skia", "wamr-sys/std", "native-dialog"]
 desktop_web = ["desktop", "slint/renderer-winit-femtovg"]
-gba = ["dep:gba", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
+gba = ["dep:gba", "voladdress", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
 
 [build-dependencies.slint-build]
 version = "1.1.0"
@@ -70,6 +70,7 @@ regex = { version = "1", optional = true }
 native-dialog = { version = "0.6", optional = true }
 
 gba = { version = "0.11", optional = true }
+voladdress = { version = "1", optional = true }
 libm = { version = "0.2", optional = true }
 critical-section = { version = "1", optional = true }
 embedded-alloc = { version = "0.5", optional = true }
