--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ edition = "2021"
 [features]
 default = ["desktop_native"]
 std = ["slint/std"]
-desktop = ["std", "slint/backend-winit", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
+desktop = ["std", "slint/backend-winit", "cpal", "rboy", "once_cell", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
 desktop_native = ["desktop", "slint/renderer-winit-skia", "wamr-sys/std", "native-dialog"]
 desktop_web = ["desktop", "slint/renderer-winit-femtovg"]
 gba = ["dep:gba", "voladdress", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
@@ -55,7 +55,6 @@ optional = true
 [dependencies]
 cpal = { version = "0.13", features = ["wasm-bindgen"], optional = true }
 once_cell = { version = "1", optional = true }
-tiny-skia = { version = "0.6", optional = true }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", optional = true }
 postcard = { version = "1", default-features = false, features = ["alloc"] }
