--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,8 @@
 [target.thumbv4t-none-eabi]
 runner = "mgba -l 15 -2"
-rustflags = ["-Clink-arg=-Tlinker_scripts/mono_boot.ld"]
+rustflags = [
+    "-Clink-arg=-Tlinker_scripts/mono_boot.ld",
+    # TODO: For some arcane reason this works around an issue preventing startup (see update_synth_index).
+    # Check if still needed in later nightlies.
+    "--emit=mir",
+    ]
