instruments: Add a generic registerInstrument
This registers declared functions automatically and doesn't require
explicitly referencing every function manually.

--- a/res/Makefile
+++ b/res/Makefile
@@ -4,13 +4,17 @@
 # Point this to the Chiptrack's released ct.zig
 CT_ZIG=ct.zig
 
-all: $(patsubst %.zig, %.wasm, $(wildcard *-instruments.zig)) $(CT_ZIG)
+all: $(patsubst %.zig, %.wat, $(wildcard *instruments.zig)) $(CT_ZIG)
 
 %.wasm: %.zig Makefile $(CT_ZIG)
-	zig build-exe -target wasm32-freestanding -dynamic -rdynamic --export-table -O ReleaseFast -fstrip --max-memory=65536 --stack 8192 --mod ct:ct:$(CT_ZIG) --deps ct $<
+	zig build-exe -target wasm32-freestanding -dynamic -rdynamic --export-table -O ReleaseFast --max-memory=65536 --stack 8192 --mod ct:ct:$(CT_ZIG) --deps ct $<
 
+%.wat: %.wasm Makefile $(CT_ZIG)
 	# Needed for instruments that will be published to GitHub Gists.
-	wasm2wat $@ | tee $(basename $@).wat
+	wasm2wat -f $< | tee $@
 
 	# Basic smoke test
-	wasm-interp $@ --host-print --dummy-import-func --run-all-exports
+	wasm-interp $< --host-print --dummy-import-func --run-all-exports
+
+	# We got the function names, now strip the .wasm from debug info.
+	wasm-strip $<
