--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install deps
+      run: sudo apt-get install -y libasound2-dev     
     - name: Build
       run: cargo build --verbose
     - name: Run tests
