--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,19 +13,53 @@ edition = "2021"
 # wasm-bindgen = { version = "0.2" }
 # wasm-bindgen-futures = { version = "0.4" }
 # js-sys = { version = "0.3" }
-# web-sys = { version = "0.3", features=["console", "Location", "UrlSearchParams"] }
+# web-sys = { version = "0.3", features = [
+#     "console",
+#     "Location",
+#     "UrlSearchParams",
+# ] }
 # console_error_panic_hook = "0.1"
 # [patch.crates-io]
-# blip_buf = { path = "../blip_buf-rs"}
+# blip_buf = { path = "../blip_buf-rs" }
 
 
 [features]
 default = ["desktop_native"]
 std = ["slint/std"]
-desktop = ["std", "slint/backend-winit", "cpal", "rboy", "once_cell", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
-desktop_native = ["desktop", "slint/renderer-winit-skia", "wamr-sys/std", "native-dialog"]
+desktop = [
+    "std",
+    "slint/backend-winit",
+    "cpal",
+    "rboy",
+    "once_cell",
+    "serde_json",
+    "wat",
+    "notify",
+    "midir",
+    "midly",
+    "url",
+    "ehttp",
+    "pulldown-cmark",
+    "regex",
+]
+desktop_native = [
+    "desktop",
+    "slint/renderer-winit-skia",
+    "wamr-sys/std",
+    "native-dialog",
+]
 desktop_web = ["desktop", "slint/renderer-winit-femtovg"]
-gba = ["dep:gba", "voladdress", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]
+gba = [
+    "dep:gba",
+    "voladdress",
+    "wamr-sys",
+    "libm",
+    "slint/unsafe-single-threaded",
+    "i-slint-core/unsafe-single-threaded",
+    "slint/libm",
+    "embedded-alloc",
+    "critical-section/restore-state-bool",
+]
 
 [build-dependencies.slint-build]
 version = "1.3.2"
