--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install deps
-      run: sudo apt-get install -y libasound2-dev
+      run: sudo apt-get install -y libasound2-dev libfreetype-dev libfontconfig-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
